--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 			"SanSIS\\Core\\DevelBundle" : ""
 		}
 	},
-	"target-dir" : "",
+	"target-dir" : "SanSIS/Core/DevelBundle",
 	"extra" : {
 		"branch-alias" : {
 			"dev-master" : "1.0-dev"
